--- a/src/Components/Event/Event.css
+++ b/src/Components/Event/Event.css
@@ -69,12 +69,14 @@
     box-shadow: 7px 4px 10px rgb(30 30 30 / 38%);
     width: 80%;
     overflow: hidden;
+    flex-grow: 0.8;
 }
 
 .event-main-img {
-    /* object-fit: cover; */
+    object-fit: contain;
     width: 100%;
     height: 100%;
+    background: black;
 }
 
 .event-more-img-container {
