[Added feature] Event image upload

--- a/src/Components/Event/Event.css
+++ b/src/Components/Event/Event.css
@@ -201,7 +201,7 @@
 .event-join-btn {
     width: fit-content;
     margin-top: 10px;
-    background-color: rgb(12, 127, 81);
+    background-color: rgb(12, 127, 81) !important;
 }
 
 .event-interaction-btns {
