[Bug fix] Chatportal message inconsistency

--- a/src/Components/Chat/chatPortal.css
+++ b/src/Components/Chat/chatPortal.css
@@ -152,5 +152,5 @@
     border-bottom-left-radius: 13px;
     border-bottom-right-radius: 13px;
     background-color: rgb(12, 127, 81);
-    color: "white"
+    color: white
 }
